[package]
name = "testcontainers-mockserver"
version = "7.0.0"
edition = "2021"
rust-version = "1.70"
description = "Testcontainers module for MockServer — start a mockserver/mockserver Docker container from Rust tests"
license = "Apache-2.0"
repository = "https://github.com/mock-server/mockserver"
keywords = ["testcontainers", "mockserver", "testing", "docker", "integration-tests"]
categories = ["development-tools::testing"]

[dependencies]
testcontainers = { version = "0.23", features = ["blocking"] }

[dev-dependencies]
reqwest = { version = "0.13", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
